# MADSci_Examples

./: .gitignore  .pre-commit-config.yaml  README.md  experiment_notebook.ipynb  node_notebook.ipynb  protocol.py  pyproject.toml  workcell_notebook.ipynb
assets/mermaid/: action_status_flow.mmd  lab_diagram.mmd  node.mmd  node_io.mmd  workflow_status_state_diagram.mmd
example_robot_module/: pyproject.toml
example_robot_module/src/: __init__.py  example_robot_interface.py  example_robot_node.py
