[project]
name = "MADSci_Examples"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Ryan Lewis", email = "ryan.lewis@anl.gov"},
]
dependencies = ["madsci-client>=0.1.9", "madsci-common>=0.1.9", "madsci-node-module>=0.1.9"]
requires-python = ">=3.9.1"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
